# koan

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FORMAT_STRINGS.md  LICENSE  Makefile  README.md  issue-memory.md  justfile  mise.toml  plan.md  spec.md
.beads/: metadata.json
.claude/: settings.json
.claude/plans/: 01-linux-and-audio-backends.md  02-dsp-and-profiles.md  03-ansi-visualizers.md  04-tagging.md  05-mouse-support.md  06-decoupled-backends.md  08-replaygain-wiring.md  09-artist-metadata.md  10-codebase-audit-2026-03-04-v0.5.2.md  10-codebase-audit-progress.md  README.md  artist-info.md  resilient-dedup-incremental-sync.md
.claude/plans/archive/: 03-ansi-visualizers.md  07-non-tag-metadata.md
.github/workflows/: ci-cd.yml  ci.yml
crates/koan-cli/: Cargo.toml
crates/koan-cli/src/: main.rs  media_keys.rs  picker.rs  queue_display.rs
crates/koan-cli/src/commands/: auth.rs  cache.rs  config.rs  enqueue.rs  library.rs  mod.rs  organize.rs  pick.rs  play.rs  probe.rs  remote.rs  scan.rs
crates/koan-cli/src/tui/: app.rs  context_menu.rs  cover_art.rs  event.rs  keys.rs  library.rs  mod.rs  organize.rs  picker.rs  queue.rs  theme.rs  track_info.rs  transport.rs  ui.rs
crates/koan-core/: Cargo.toml  build.rs
crates/koan-core/src/: auth.rs  config.rs  credentials.rs  graphql_client.rs  helpers.rs  lib.rs  lyrics.rs  organize.rs  radio.rs  session.rs  test_utils.rs
crates/koan-core/src/audio/: analyzer.rs  backend.rs  buffer.rs  coreaudio_backend.rs  cpal_backend.rs  device.rs  engine.rs  mod.rs  opus.rs  replaygain.rs  streaming.rs  viz.rs
crates/koan-core/src/db/: connection.rs  queries.rs  schema.rs
crates/koan-core/src/db/queries/: albums.rs  artists.rs  auth.rs  favourites.rs  lyrics.rs  mod.rs  neural_vectors.rs  playback_state.rs  radio.rs  scan_cache.rs  search.rs  snapshots.rs  stats.rs  tracks.rs  vectors.rs
crates/koan-core/src/format/: eval.rs  functions.rs  mod.rs  parser.rs
crates/koan-core/src/index/: features.rs  metadata.rs  mod.rs  neural.rs  scanner.rs  watcher.rs
crates/koan-core/src/player/: commands.rs  mod.rs  queue.rs  state.rs  undo.rs
crates/koan-core/src/remote/: client.rs  listenbrainz.rs  lrclib.rs  mod.rs  musicbrainz.rs  sync.rs
crates/koan-ffi/: Cargo.toml  cbindgen.toml  uniffi.toml
crates/koan-ffi/src/: audio_ffi.rs  lib.rs
crates/koan-music/: Cargo.toml
crates/koan-music/src/: main.rs  media_keys.rs  remote_bridge.rs
crates/koan-music/src/commands/: analyze.rs  cache.rs  config.rs  download_queue.rs  enqueue.rs  graphql.rs  library.rs  mcp.rs  mod.rs  pick.rs  picker_items.rs  play.rs  probe.rs  remote.rs  scan.rs  search.rs  serve.rs
crates/koan-music/src/commands/graphql/: helpers.rs  mod.rs  mutations.rs  queries.rs  server.rs  types.rs
crates/koan-music/src/graphql/: mod.rs  schema.rs  types.rs
crates/koan-music/src/tui/: app.rs  context_menu.rs  cover_art.rs  device_selector.rs  event.rs  help_modal.rs  keys.rs  library.rs  lyrics.rs  mod.rs  organize.rs  picker.rs  queue.rs  theme.rs  track_info.rs  transport.rs  ui.rs  visualizer.rs  viz_picker.rs
crates/koan-server/: Cargo.toml
crates/koan-server/src/: lib.rs  mcp.rs  subsonic.rs
crates/koan-server/src/auth/: middleware.rs  mod.rs  routes.rs
crates/koan-server/src/graphql/: helpers.rs  mod.rs  mutations.rs  queries.rs  server.rs  subscriptions.rs  types.rs
crates/koan-tui/: Cargo.toml
crates/koan-tui/src/: app.rs  backend.rs  cover_art.rs  device_selector.rs  download_queue.rs  enqueue.rs  keys.rs  lib.rs  library.rs  picker_items.rs  play.rs  queue.rs  remote_bridge.rs  theme.rs  track_info.rs  transport.rs  ui.rs  visualizer.rs
docs/: architecture-improvements.md  format-strings.md  getting-started.md
docs/guide/: authentication.md  file-organization.md  graphql-api.md  headless-server.md  mcp-integration.md  radio-mode.md  remote-servers.md
docs/recipes/: cache-management.md  troubleshooting.md
docs/reference/: cli.md  configuration.md  keybindings.md
ios/: Package.swift  README.md
ios/.build/: build.db  debug.yaml
ios/.build/arm64-apple-macosx/debug/: plugin-tools-description.json
ios/.build/arm64-apple-macosx/debug/Koan.build/: AlbumDetailView.d  AlbumDetailView.swiftdeps  AlbumListView.d  AlbumListView.swiftdeps  ArtistDetailView.d  ArtistDetailView.swiftdeps  ArtistListView.d  ArtistListView.swiftdeps  ContentView.d  ContentView.swiftdeps  CoverArtView.d  CoverArtView.swiftdeps  FavouritesView.d  FavouritesView.swiftdeps  FormatDuration.d  FormatDuration.swiftdeps  GraphQLClient.d  GraphQLClient.swiftdeps  GraphQLTypes.d  GraphQLTypes.swiftdeps  Koan.emit-module.d  KoanApp.d  KoanApp.dia  KoanApp.swiftdeps  LibraryRootView.d  LibraryRootView.swiftdeps  MiniPlayerView.d  MiniPlayerView.swiftdeps  Models.d  Models.swiftdeps  NowPlaying.d  NowPlaying.swiftdeps  NowPlayingView.d  NowPlayingView.swiftdeps  PlaybackManager.d  PlaybackManager.swiftdeps  PlaybackState.d  PlaybackState.swiftdeps  Queries.d  Queries.swiftdeps  (+21 more)
ios/.build/arm64-apple-macosx/debug/Modules/: Koan.swiftdoc  Koan.swiftmodule  Koan.swiftsourceinfo
ios/Sources/Koan/: ContentView.swift  KoanApp.swift
ios/Sources/Koan/Config/: ServerConfig.swift
ios/Sources/Koan/GraphQL/: GraphQLClient.swift  GraphQLTypes.swift  Queries.swift
ios/Sources/Koan/Models/: Album.swift  Artist.swift  FormatDuration.swift  Models.swift  NowPlaying.swift  PlaybackManager.swift  PlaybackState.swift  QueueEntry.swift  ServerConfig.swift  Track.swift
ios/Sources/Koan/Views/Favourites/: FavouritesView.swift
ios/Sources/Koan/Views/NowPlaying/: CoverArtView.swift  MiniPlayerView.swift  NowPlayingView.swift  SeekBar.swift  TransportControls.swift
ios/Sources/Koan/Views/Queue/: QueueItemRow.swift  QueueView.swift
scripts/: build-rust.sh  build-xcframework.sh  build.sh  generate-bindings.sh
swift/: Package.swift
swift/Sources/Koan/: KoanApp.swift  KoanFFI.swift
swift/Sources/Koan/Views/: ContentView.swift
swift/Sources/KoanFFIFFI/: KoanFFIFFI.h  koan_audio_ffi.h
test-fixtures/broken-tags/: README
(+451 files in other folders)
