[workspace]
resolver = "2"
members = ["crates/koan-core", "crates/koan-music"]

[workspace.package]
version = "0.7.0"
edition = "2024"
homepage = "https://github.com/radiosilence/koan"
repository = "https://github.com/radiosilence/koan"
license = "MIT"

[workspace.dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
walkdir = "2.5"
