[workspace]
resolver = "2"
members = ["crates/koan-core", "crates/koan-server", "crates/koan-tui", "crates/koan-cli"]

[workspace.package]
version = "0.23.1"
edition = "2024"
homepage = "https://github.com/radiosilence/koan"
repository = "https://github.com/radiosilence/koan"
license = "MIT"

[workspace.dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
walkdir = "2.5"
