[package]
name = "koan-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "koan"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
crossbeam-channel = "0.5"
crossterm = "0.28"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
koan-core = { path = "../koan-core" }
libc = "0.2"
log = "0.4"
nucleo = "0.5"
owo-colors = "4"
ratatui = "0.29"
rpassword = "7.4"
souvlaki = "0.8"
rusqlite = { version = "0.38", features = ["bundled-full"] }
toml = "0.9"
walkdir = "2"
