[package]
name = "koan-core"
version.workspace = true
edition.workspace = true

[dependencies]
# CoreAudio
coreaudio-sys = "0.2"
crossbeam-channel = "0.5"
# Config
dirs = "6"
ebur128 = "0.1"
env_logger = "0.11"
# Metadata
lofty = "0.23"
log = "0.4"
# Subsonic/Navidrome
md5 = "0.8"
# File watching
notify = "8"
notify-debouncer-full = "0.5"
# Async/threading
parking_lot = "0.12"
rayon = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "json",
  "query",
  "rustls",
] }
rtrb = "0.3"
# Database
rusqlite = { version = "0.38", features = ["bundled-full"] }
# Credentials
security-framework = "3.5"
# Serialization
serde = { version = "1", features = ["derive"] }
# Audio
symphonia = { version = "0.5", features = ["all"] }
# Utilities
thiserror = "2"
toml = "0.9"
walkdir = "2.5"
