[package]
name = "koan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for koan — bit-perfect macOS music player. Audio engine, player, database, format strings."
keywords = ["audio", "music", "player", "coreaudio"]
categories = ["multimedia::audio"]

[dependencies]
# CoreAudio
coreaudio-sys = "0.2"
crossbeam-channel = "0.5"
# Config
dirs = "6"
ebur128 = "0.1"
# Metadata
lofty = "0.23"
log = "0.4"
# Subsonic/Navidrome
getrandom = "0.2"
md5 = "0.8"
# Async/threading
parking_lot = "0.12"
rayon = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "json",
  "query",
  "rustls",
] }
realfft = "3"
rtrb = "0.3"
# Database
rusqlite = { workspace = true }
# Credentials
security-framework = "3.5"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Audio
symphonia = { version = "0.5", default-features = false, features = [
    "flac", "mp3", "aac", "vorbis", "alac", "pcm", "isomp4", "ogg", "wav", "aiff", "opt-simd",
] }
# Utilities
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
toml = "0.9"
walkdir = { workspace = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
