[package]
name = "koan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for koan — bit-perfect music player. Audio engine, player, database, format strings."
keywords = ["audio", "music", "player"]
categories = ["multimedia::audio"]

[dependencies]
# Acoustic analysis
bliss-audio = { version = "0.11", default-features = false, features = ["aubio-static", "symphonia-all"] }
bliss-audio-aubio-rs = { version = "0.2", features = ["bindgen"] }
crossbeam-channel = "0.5"
chrono = "0.4"
# Config
dirs = "6"
figment = { version = "0.10", features = ["toml", "env"] }
ebur128 = "0.1"
# Credentials (cross-platform: macOS Keychain, Linux secret-service)
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
# Metadata
lofty = "0.23"
log = "0.4"
# Subsonic/Navidrome
getrandom = "0.2"
md5 = "0.8"
# Async/threading
parking_lot = "0.12"
rayon = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "json",
  "query",
  "rustls",
] }
realfft = "3"
rtrb = "0.3"
# Database
rusqlite = { workspace = true }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Audio
symphonia = { version = "0.5", default-features = false, features = [
    "flac", "mp3", "aac", "vorbis", "alac", "pcm", "isomp4", "ogg", "wav", "aiff", "opt-simd",
] }
# Utilities
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
toml = "0.9"
walkdir = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
cpal = "0.15"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
