[package]
name = "koan-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "staticlib"]
name = "koan_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[dependencies]
crossbeam-channel = "0.5"
koan-core = { path = "../koan-core" }
uniffi = { version = "0.31", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }
