[package]
name = "koan-music"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bit-perfect macOS music player — Ratatui TUI, gapless playback, Navidrome/Subsonic integration."
keywords = ["audio", "music", "player", "tui"]
categories = ["multimedia::audio"]

[[bin]]
name = "koan"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
ctrlc = "3"
crossbeam-channel = "0.5"
crossterm = "0.28"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
koan-core = { path = "../koan-core", version = "0.9.2" }
log = "0.4"
nucleo = "0.5"
owo-colors = "4"
ratatui = "0.29"
jwalk = "0.8"
rayon = "1"
rpassword = "7.4"
souvlaki = "0.8"
core-foundation = "0.9"
toml = "0.9"
walkdir = { workspace = true }
